k8s/web-prod/overlays/staging/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-core-deployment
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: workload
                operator: In
                values:
                - webteam
      containers:
        - name: graphql-core
